objects/ASI_CRM_DailyReport__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Daily Reports</relationshipLabel>
        <relationshipName>ASI_CRM_Customer_DailyReport</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_OutletManagerComment__c</fullName>
        <label>Outlet Manager Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PGLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PG Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_DailyReport_PGLeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PhotoCaptureOthers__c</fullName>
        <label>Photo Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promoter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoter</label>
        <referenceTo>ASI_CRM_Promoter__c</referenceTo>
        <relationshipLabel>Daily Reports</relationshipLabel>
        <relationshipName>ASI_CRM_DailyReport_Promoter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_StagingDateTime__c</fullName>
        <label>Staging DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubmitDateTime__c</fullName>
        <label>Submit DateTime</label>
        <type>DateTime</type>
    </fields>
    <label>Daily Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_VN_Daily_Reports</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_OutletManagerComment__c</columns>
        <columns>ASI_CRM_Promoter__c</columns>
        <columns>ASI_CRM_DateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_DailyReport__c.ASI_CRM_VNDailyReport</value>
        </filters>
        <label>All VN Daily Reports</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DR-{YY}{000000}</displayFormat>
        <label>Daily Report No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Reports</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VNDailyReport</fullName>
        <active>true</active>
        <label>VN Daily Report</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>